# twr-gateway-radio-dongle

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  meta.yml
.github/workflows/: main.yml
app/: application.c  application.h  eeprom.c  eeprom.h  radio.h  sensors.c  sensors.h  usb_talk.c  usb_talk.h
src/: CMakeLists.txt  application.c  application.h  eeprom.c  eeprom.h  sensors.c  sensors.h  usb_talk.c  usb_talk.h
